test/corpus/statements.txt
================================================================================
Return statements
================================================================================

return 5;
return true;
return;


--------------------------------------------------------------------------------

(program
  (return_statement
    (integer))
  (return_statement
    (true))
  (return_statement))

================================================================================
Expression statements
================================================================================

foobar;

--------------------------------------------------------------------------------

(program
  (expression_statement
    (identifier)))


================================================================================
Let statements
================================================================================

let a = "foo";
let b = 55;
let c = true;

--------------------------------------------------------------------------------

(program
  (let_statement
    (identifier)
    (string))
  (let_statement
    (identifier)
    (integer))
  (let_statement
    (identifier)
    (true)))
